[package]
name = "forage-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["rt-multi-thread", "net", "macros", "sync"] }
axum = { version = "0.8.9", features = ["ws"] }
wincode = { version = "0.5.5", features = [ "alloc" ] }
futures-util = "0.3.32"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3.32"
forage-core = { path = "../core" }
forage-network = { path = "../network" }
